Heroku meta tag

--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,7 +1,7 @@
 # config/meta.yml
 
-meta_product_name: "Product Name"
-meta_title: "Product name - Product tagline"
-meta_description: "Relevant description"
+meta_product_name: "Parallel"
+meta_title: "Parallel - Une autre approche de la médecine"
+meta_description: "Parallel vous offre un accès simplifié aux médecines alternatives
+pour vous accompagner dans la découverte d'une nouvelle pratique de soin."
 meta_image: "cover.png" # should exist in `app/assets/images/`
-twitter_account: "@product_twitter_account"   # required for Twitter Cards
